@@ -1,6 +1,6 @@
 bin_PROGRAMS=wfut
 
-INCLUDES=-I${top_srcdir}
+INCLUDES=-I${top_srcdir} -I$(top_builddir)
 
 
 wfut_LDADD=../libwfut/libwfut-0.2.la
